--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         node-version: 18.x
         cache: 'npm'
+        cache-dependency-path: ./client/package-lock.json
         
     - name: npm clean & install
       run: npm clean-install
