--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,7 +46,7 @@ jobs:
           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
           --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
           --ignore-hidden-files \
-          --source build
+          --source .
 
     - name: Deploy to AWS EC2 from S3
       run: |
