--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,9 @@ jobs:
     - name: npm build
       run: npm run build
 
+    - name: Remove template files
+      run: rm -rf node_modules public scripts src index.html package*
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
