--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,18 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 18.x
-                
-    - name: npm install
-      run: npm install
+
+    - name: Setup Cache
+      uses: actions/cache@v3
+      with:
+        path: "**/node_modules"
+        key: ${{ runner.os }}-node-${{ hashFiles("**/package-lock.json") }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
+    - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit <> 'true'
+      run: npm ci
       
     - name: npm build
       run: npm run build
