--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Setup Cache
       uses: actions/cache@v3
       with:
-        path: "**/node_modules"
-        key: ${{ runner.os }}-node-${{ hashFiles("**/package-lock.json") }}
+        path: '**/node_modules'
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
           
