--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
           ${{ runner.os }}-node-
           
     - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit <> 'true'
+      if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci
       
     - name: npm build
