--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,12 +29,16 @@ jobs:
 
     - name: Setup Cache
       uses: actions/cache@v3
+      id: npm-cache
       with:
-        path: '**/node_modules'
+        path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-          
+
+    - if: steps.npm-cache.outputs.cache-hit == 'true'
+      run: echo 'npm cache hit!'
+    - if: steps.npm-cache.outputs.cache-hit != 'true'
+      run: echo 'npm cache missed!'
+        
     - name: Install Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm install
